<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sicks300_ros2</name>
  <version>1.3.3</version>
  <description>This package published a laser scan message out of a Sick S300 laser scanner.</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache 2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>laser_filters</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
